# finite-element-code-samples-using-deal.II

./: CMakeLists.txt  ElastoPlastic.cpp  README.md  beam_parameter.h  classical_fracture.cpp  draw_hollowSphere.py  enrichTest.h  feValueTest.cpp  fe_enriched_test.cpp  fem.cfg  fem1D.cpp  fracture_msh.py  hollowSphere.cpp  hollowSphereEighth.cpp  hollowSphere_pp.py  parameter.txt  parameter_fracture.txt  parameter_update.txt  planar_beam.cpp  planar_beam_symmetric.cpp  post_processing.h  practice5.cpp  theory.docx  traction_rod.cpp  traction_rod.py
html/: annotated.html  class_classical_fracture_1_1_fracture_problem-members.html  class_classical_fracture_1_1_fracture_problem.html  class_elasto_plastic_1_1_s_p_h_e_r_i_c_a_l___s_h_e_l_l-members.html  class_elasto_plastic_1_1_s_p_h_e_r_i_c_a_l___s_h_e_l_l.html  class_practice5-members.html  class_practice5.html  class_right_hand_side-members.html  class_right_hand_side.html  class_traction_rod_computation_1_1_traction_rod-members.html  class_traction_rod_computation_1_1_traction_rod.html  classdraw__hollow_sphere_1_1_sphere_mesh-members.html  classdraw__hollow_sphere_1_1_sphere_mesh.html  classes.html  classfe__enriched__test_1_1_near_tip_enrichment_function-members.html  classfe__enriched__test_1_1_near_tip_enrichment_function.html  classfe__enriched__test_1_1_solution_function-members.html  classfe__enriched__test_1_1_solution_function.html  classfracture__msh_1_1_fracture_mesh-members.html  classfracture__msh_1_1_fracture_mesh.html  classhollow_sphere_original_1_1_compute_radius_displacement-members.html  classhollow_sphere_original_1_1_compute_radius_displacement.html  classhollow_sphere_original_1_1_compute_stress_field-members.html  classhollow_sphere_original_1_1_compute_stress_field.html  classhollow_sphere_original_1_1_right_hand_side-members.html  classhollow_sphere_original_1_1_right_hand_side.html  classhollow_sphere_original_1_1hollow_sphere-members.html  classhollow_sphere_original_1_1hollow_sphere.html  classhollow_sphere_update_1_1hollow_sphere-members.html  classhollow_sphere_update_1_1hollow_sphere.html  classplanar__beam_1_1_beam-members.html  classplanar__beam_1_1_beam.html  classplanar__beam_1_1_compute_stress_field-members.html  classplanar__beam_1_1_compute_stress_field.html  classplanar__beam_1_1_right_hand_side-members.html  classplanar__beam_1_1_right_hand_side.html  classplanar__beam__update_1_1_beam-members.html  classplanar__beam__update_1_1_beam.html  classpost__processing_1_1_compute_stress_field-members.html  classpost__processing_1_1_compute_stress_field.html  (+37 more)
msh/: beam_triangulation.msh  beam_triangulation_update.msh  (+10 more)
